# talent-sourcing

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  pytest.ini  requirements.txt  vercel.json
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: voice_agent.py  voice_screening.py
backend/app/api/v1/: api.py  auth.py  candidates.py  jobs.py
backend/app/core/: config.py  exceptions.py  logging.py  mongodb.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: api.py  database.py  voice_agent.py
backend/app/services/: ai.py  auth.py  candidates.py  jobs.py  ultravox.py  voice_agent.py  voice_screening.py
backend/app/tests/: conftest.py  test_candidates.py  test_jobs.py  test_notice_period_update.py  test_resume_upload.py  test_voice_screening.py  test_voice_screening_workflow.py
backend/app/utils/: phone_utils.py
backend/scripts/: migrate_to_atlas.py  simulate_notice_period_call.py  update_candidate_notice_period.py
backend/tests/: __init__.py  test_api_endpoints.py
backend/tests/auth/: conftest.py  test_auth.py
backend/tests/candidates/: __init__.py  conftest.py  test_candidates.py
backend/tests/jobs/: __init__.py  conftest.py  test_jobs.py
backend/tests/voice_screening/: __init__.py  conftest.py  make_test_call.py  test_call.py  test_phone_utils.py  test_ultravox.py  test_voice_call.py  test_voice_screening.py  test_voice_screening_service.py  test_voice_screening_workflow.py
docs/: api-documentation.md  architecture-mermaid.md  architecture.md  deployment-guide.md  notes.txt  (+4 more)
(+36 files in other folders)
